# null-axis-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: database.sql
db/init/: 01-schema.sql  02-import-data.sh
nginx/: nginx.conf
src/: app.py  main.py  models.py  settings.py  state.py  states.py  system_prompts.py  workflow.py
src/system-prompts/: guardrail_prompt.md  query_writer_prompt.md  responder_prompt.md  sumamrize_prompt.md
