[project]
name = "null-axis-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "langchain-openai>=1.1.8",
    "langgraph>=1.0.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlglot[rs]>=28.10.1",
]
